<resources>
    <string name="app_name">后勤管家</string>
    <string name="login">登录</string>
    <string name="login_user">用户名</string>
    <string name="login_pass">密码</string>
    <string name="login_title">管家婆-后勤管家</string>
    <string name="tv_set_server">服务器设置</string>
    <string name="url_server">通信URL</string>
    <string name="server_url">请输入通信url</string>
    <string name="server_address">http://192.168.18.99:1818</string>
    <string name="server_save">保存</string>
    <string name="server_back">返回</string>
    <string name="tv_news">首页</string>
    <string name="tv_circle">系统设置</string>
    <string name="set_img">图片设置</string>
    <string name="set_list">是否显示图片</string>
    <string name="set_upload">仅WIFI情况下上传图片</string>
    <string name="set_basic">基本信息</string>
    <string name="set_more">更多</string>
    <string name="set_about">关于</string>
    <string name="button_out">注销</string>
    <string name="deal_ybl">已办理</string>
    <string name="deal_wbl">待办理</string>
    <string name="query_djlx">单据类型</string>
    <string name="query_cb1">采购申请</string>
    <string name="query_cb2">领用申请</string>
    <string name="query_cb3">借用申请</string>
    <string name="query_cb4">销售订单</string>
    <string name="query_cb5">采购申请</string>
    <string name="query_cb6">采购申请</string>
    <string name="query_sqsj">申请时间</string>
    <string name="query_sqsjhint">申请时间</string>
    <string name="yhzh">银行账号:</string>
    <string name="hjje">合计金额:</string>
    <string name="zdrq">制单日期:</string>
    <string name="zdbm">制单部门:</string>
    <string name="sqr">申&#160;&#160;请&#160;&#160;人:</string>
    <string name="spr">审&#160;&#160;批&#160;&#160;人:</string>
    <string name="khh">开&#160;&#160;户&#160;&#160;行:</string>
    <string name="lkr">领&#160;&#160;款&#160;&#160;人:</string>
    <string name="lyr">领用人:</string>
    <string name="jzy">记&#160;&#160;帐&#160;&#160;员:</string>
    <string name="pzh">凭&#160;&#160;&#160;&#160;&#160;证&#160;&#160;&#160;&#160;号:</string>
    <string name="dbr">调&#160;&#160;&#160;&#160;&#160;拨&#160;&#160;&#160;&#160;人:</string>
    <string name="gys">供&#160;&#160;&#160;&#160;&#160;应&#160;&#160;&#160;&#160;商:</string>
    <string name="jb">级&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别:</string>
    <string name="rq">日&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;期:</string>
    <string name="bm">部&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;门:</string>
    <string name="kh">客&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;户:</string>
    <string name="zy">摘&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;要:</string>
    <string name="bz">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>
    <string name="bm4">部&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;门:</string>
    <string name="djbs">单&#160;&#160;据&#160;标&#160;识:</string>
    <string name="prbm">盘&#160;&#160;入&#160;部&#160;门:</string>
    <string name="dbbm">调&#160;&#160;拨&#160;部&#160;门:</string>
    <string name="pdbm">盘&#160;&#160;点&#160;部&#160;门:</string>
    <string name="pdlx">盘&#160;&#160;点&#160;类&#160;型:</string>
    <string name="kcrq">库&#160;&#160;存&#160;日&#160;期:</string>
    <string name="prr">盘入人:</string>
    <string name="crkfs">出入库方式:</string>
    <string name="tv_ysgj_login">映射工具账号登录</string>
    <string name="ysgj_login_user">请输入映射用户名</string>
    <string name="ysgj_login_pass">请输入映射密码</string>
    <string name="ysgj_port">请输入端口号(1-65535)</string>

</resources>
