<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f6adad"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/sqr"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/spr"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="审批日期:"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="审核类别:"
                    android:textColor="@color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_item_audire_info_2"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_4"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_6"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_8"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="申请日期:"
                    android:textColor="@color/white" />
                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="审批状态:"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/jb"
                    android:textColor="@color/white" />
                <TextView
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="审核项目:"
                    android:textColor="@color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_item_audire_info_3"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_5"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_7"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tv_item_audire_info_9"
                    style="@style/item_wldw"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#000" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/item_wldw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="审批意见:"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_item_audire_info_10"
            style="@style/item_wldw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

    </LinearLayout>
</LinearLayout>
